--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Admin Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="sidebar"></div>
+
+    <div class="header"></div>
+
+    <div class="main-content"></div>
+  </body>
 </html>
