Add global font-family

--- a/index.html
+++ b/index.html
@@ -7,10 +7,61 @@
     <title>Admin Dashboard</title>
   </head>
   <body>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+      <ul>
+        <li class="logo">Dashboard</li>
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
 
-    <div class="header"></div>
+    <div class="header">
+      <!-- <img />
+        <input type="search" />
+        <img />
+        <img />
+        <p></p>
 
-    <div class="main-content"></div>
+        <img />
+        <p></p>
+        <p></p>
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button> -->
+    </div>
+
+    <div class="main-content">
+      <!-- <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p>
+        </div>
+        <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p>
+        </div>
+        <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p>
+        </div>
+        <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p>
+        </div>
+        <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p>
+        </div>
+        <div class="project card">
+          <p class="title">TITLE PLACEHOLDER</p>
+          <p>description placeholder</p> -->
+      <!-- </div> -->
+    </div>
   </body>
 </html>
