--- a/index.html
+++ b/index.html
@@ -75,18 +75,28 @@
     </div>
 
     <div class="header">
-      <!-- <img />
+      <div class="search-bar">
+        <img alt="magnifying glass" />
         <input type="search" />
-        <img />
-        <img />
-        <p></p>
+      </div>
 
-        <img />
-        <p></p>
-        <p></p>
+      <div class="profile-blurb">
+        <img alt="notification bell" />
+        <img alt="profile picture" />
+        <p>Username</p>
+      </div>
+
+      <div class="greeting">
+        <img alt="bigger profile pic" />
+        <p>Hi there,</p>
+        <p>Morgan Oakley</p>
+      </div>
+
+      <div class="action-buttons">
         <button>New</button>
         <button>Upload</button>
-        <button>Share</button> -->
+        <button>Share</button>
+      </div>
     </div>
 
     <div class="main-content">
