Complete header section styling

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
     </div>
 
     <div class="header">
-      <!-- need to put search bar and profile blurb into a flexbox -->
       <div class="search-bar">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <title>magnify</title>
@@ -104,14 +103,17 @@
           src="img/psyduck.jpg"
           alt="bigger profile pic"
         />
-        <p>Hi there,</p>
-        <p>Morgan Oakley (@morgan)</p>
+
+        <div class="greeting-text bold">
+          <p>Hi there,</p>
+          <p>Morgan Oakley (@morgan)</p>
+        </div>
       </div>
 
       <div class="action-buttons">
-        <button>New</button>
-        <button>Upload</button>
-        <button>Share</button>
+        <button class="bold">New</button>
+        <button class="bold">Upload</button>
+        <button class="bold">Share</button>
       </div>
     </div>
 
