Generalize card styling for reuse

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="projects-section">
         <p class="bold">Your Projects</p>
         <div class="projects-grid">
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Super Cool Project</p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
@@ -151,7 +151,7 @@
               </svg>
             </div>
           </div>
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Less Cool Project</p>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi
@@ -181,7 +181,7 @@
               </svg>
             </div>
           </div>
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Impossible App</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
@@ -211,7 +211,7 @@
               </svg>
             </div>
           </div>
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Easy Peasy App</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
@@ -241,7 +241,7 @@
               </svg>
             </div>
           </div>
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Ad Blocker</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi id
@@ -271,7 +271,7 @@
               </svg>
             </div>
           </div>
-          <div class="project-card">
+          <div class="card">
             <p class="title bold">Money Maker</p>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt
