Add announcement and trending styles

--- a/index.html
+++ b/index.html
@@ -305,9 +305,56 @@
       </div>
       <div class="announcements">
         <p class="bold">Announcements</p>
+        <div class="card">
+          <div>
+            <p class="bold">Site Maintenance</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet,
+              architecto! Excepturi rerum, nulla rem...
+            </p>
+          </div>
+          <div>
+            <p class="bold">Community Share Day</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              voluptate error tempora? Quis...
+            </p>
+          </div>
+          <div>
+            <p class="bold">Updated Privacy Policy</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae quia laborum totam, suscipit sint quod sequi...
+            </p>
+          </div>
+        </div>
       </div>
       <div class="trending">
         <p class="bold">Trending</p>
+        <div class="card">
+          <ul>
+            <li>
+              <img class="profile-pic" src="img/psyduck.jpg" alt="" />
+              <p>@username</p>
+              <p>Project Name in grey</p>
+            </li>
+            <li>
+              <img class="profile-pic" src="img/psyduck.jpg" alt="" />
+              <p>@username</p>
+              <p>Project Name in grey</p>
+            </li>
+            <li>
+              <img class="profile-pic" src="img/psyduck.jpg" alt="" />
+              <p>@username</p>
+              <p>Project Name in grey</p>
+            </li>
+            <li>
+              <img class="profile-pic" src="img/psyduck.jpg" alt="" />
+              <p>@username</p>
+              <p>Project Name in grey</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
